--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,9 @@
 @import 'components/variables.css';
 @import 'components/base.css';
 @import 'components/layout.css';
+@import 'components/utility.css';
+
+/* Components */
 @import 'components/header.css';
 @import 'components/nav-primary.css';
 @import 'components/nav-secondary.css';
