--- a/src/components/header-search.css
+++ b/src/components/header-search.css
@@ -2,12 +2,12 @@
   input[type="search"] {
     border: 0;
     background-color: #F1F4F7;
-    margin-left: calc(-1 * var(--unit));
-    margin-right: calc(-1 * var(--unit));
-    margin-bottom: calc(2 * var(--unit));
-    width: calc(100% + 2 * var(--unit));
-    height: calc(3 * var(--unit));
-    padding: calc(2 * var(--unit));
+    margin-left: calc(-1 * var(--sp));
+    margin-right: calc(-1 * var(--sp));
+    margin-bottom: calc(2 * var(--sp));
+    width: calc(100% + 2 * var(--sp));
+    height: calc(3 * var(--sp));
+    padding: calc(2 * var(--sp));
     font-family: serif;
     font-size: 16px;
   }
