--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,21 +1,21 @@
 main {
-  padding-top: calc(5 * var(--unit));
+  padding-top: calc(5 * var(--sp));
 }
 
 h1 {
   grid-column: 1 / -1;
-  margin-bottom: var(--unit);
+  margin-bottom: var(--sp);
   font-weight: bold;
   font-size: 24px;
-  line-height: calc(1.5 * var(--unit));
+  line-height: calc(1.5 * var(--sp));
   letter-spacing: -0.02em;
   color: #0D1214;
 
   @media (min-width: 700px) {
     grid-column: 3 / -3;
-    margin-bottom: calc(4 * var(--unit));
+    margin-bottom: calc(4 * var(--sp));
     font-size: 60px;
-    line-height: calc(4 * var(--unit));
+    line-height: calc(4 * var(--sp));
   }
 }
 
