--- a/src/components/social-container.css
+++ b/src/components/social-container.css
@@ -1,24 +1,26 @@
 .social-container {
-  @media (min-width: 700px) {
-    position: absolute;
-    top: calc(10 * var(--sp));
+  @media (--nav) {
+    position: sticky;
+    top: 0;
     left: 0;
     width: 90px;
-    height: calc(100vh - (10 * var(--sp)));
+    height: 100vh;
+    flex-shrink: 0;
     padding: calc(8 * var(--sp)) 0;
     background-color: #F7F9FA;
 
     .rotate {
       display: flex;
+      align-items: center;
       width: 100%;
       margin: var(--sp) auto;
-      align-items: center;
-      writing-mode: vertical-lr;
-      transform: rotate(180deg);
+      transform: rotate(-90deg);
+      white-space: nowrap;
     }
 
     .social-label {
-      margin-bottom: calc(2 * var(--sp));
+      margin-right: var(--sp);
+      margin-top: -2px;
       font-size: 12px;
       letter-spacing: 4px;
       text-transform: uppercase;
