--- a/src/css/components/main.css
+++ b/src/css/components/main.css
@@ -11,7 +11,7 @@ h1 {
   letter-spacing: -0.02em;
   color: #0D1214;
 
-  @media (min-width: 700px) {
+  @media (--md) {
     grid-column: 3 / -3;
     margin-bottom: calc(4 * var(--sp));
     font-size: 60px;
@@ -22,7 +22,7 @@ h1 {
 p {
   grid-column: 1 / -1;
 
-  @media (min-width: 700px) {
+  @media (--md) {
     grid-column: 3 / -3;
   }
 }
