--- a/src/css/components/nav-primary.css
+++ b/src/css/components/nav-primary.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
 
-    @media (min-width: 700px) {
+    @media (--nav) {
       display: flex;
       align-items: center;
 
@@ -50,9 +50,52 @@
     letter-spacing: -1px;
     color: var(--black-1);
 
-    @media (min-width: 700px) {
+    @media (--nav) {
       font-size: 16px;
       letter-spacing: 0.02em;
     }
+  }
+}
+
+.nav-primary__button {
+  display: none;
+
+  @media (--nav) {
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+    width: var(--content-left);
+    height: calc(6 * var(--sp));
+    border: 0;
+  }
+}
+
+.nav-primary__icon {
+  position: relative;
+  width: calc(2 * var(--sp));
+  height: 3px;
+  background-color: white;
+  pointer-events: none;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: -8px;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    top: auto;
+    left: 0;
+    bottom: -8px;
+    height: 100%;
+    width: 100%;
+    background-color: white;
   }
 }
