--- a/src/css/components/social-container.css
+++ b/src/css/components/social-container.css
@@ -6,7 +6,6 @@
     left: 0; */
     width: var(--content-left);
     flex-shrink: 0;
-    padding: calc(8 * var(--sp)) 0;
     background-color: #F7F9FA;
 
     .rotate {
@@ -26,5 +25,19 @@
       text-transform: uppercase;
       color: #98ABB9;
     }
+  }
+}
+
+.social-container__inner {
+  position: relative;
+  width: var(--content-left);
+  background-color: #F7F9FA;
+  padding: calc(8 * var(--sp)) 0;
+
+  &.js-fixed {
+    position: fixed;
+    top: calc(6 * var(--sp));
+    left: 0;
+    height: calc(100vh - 6 * var(--sp))
   }
 }
