--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,8 @@
 
 /* Components */
 @import 'components/header.css';
+@import 'components/nav-button-mobile.css';
+@import 'components/nav-button-wide.css';
 @import 'components/nav-primary.css';
 @import 'components/nav-secondary.css';
 @import 'components/header-search.css';
