--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -15,17 +15,20 @@
     top: -72px;
     width: 100%;
 
-
+    .container {
+      box-shadow: 0px 1px 36px rgba(0, 0, 0, 0.08);
+    }
   }
 
   &.js-fixed:not([aria-expanded="true"]) {
     .container {
-      transform: translatex(-100vw);
+      transform: translatex(-101%);
+      opacity: 0;
     }
   }
 
   .container {
-    transition: transform 0.5s;
+    transition: all 0.5s;
     background: white;
   }
 }
