--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,4 +12,5 @@
 @import 'components/nav-secondary.css';
 @import 'components/header-search.css';
 @import 'components/social-container.css';
+@import 'components/search-button-mobile.css';
 @import 'components/main.css';
