--- a/src/css/components/base.css
+++ b/src/css/components/base.css
@@ -6,6 +6,11 @@ body {
   margin: 0;
   font-family: var(--font-sans);
   line-height: var(--sp);
+
+  &.js-fixed {
+    position: fixed;
+    overflow: hidden;
+  }
 }
 
 a {
@@ -16,4 +21,19 @@ a {
 img {
   display: block;
   max-width: 100%;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0E6BA6;
+  opacity: 0.2;
+
+  .js-overlay-active & {
+    display: block;
+  }
 }
