--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -72,21 +72,28 @@
 }
 
 .header-nav {
-  display: none;
+  visibility: hidden;
   position: fixed;
   right: 0;
   top: 0;
-  width: calc(100% - (2 * var(--sp)));
+  z-index: 5; /* appear above overlay */
+  transform: translatex(101%);
+  /* width: calc(100% - (2 * var(--sp))); */
+  width: 100%;
   height: 100%;
   padding: var(--sp);
+  padding-top: calc(3 * var(--sp));
   overflow: auto;
   max-width: 500px;
   background-color: white;
+  transition: all 0.2s;
 
   @media (--nav) {
+    visibility: visible;
     position: static;
     grid-column: 4 / -1;
     height: calc(6 * var(--sp));
+    transform: none;
     max-width: none;
     padding: 0;
     overflow: visible;
@@ -95,5 +102,10 @@
     align-items: center;
     justify-content: flex-end;
     transition: transform 0.2s;
+  }
+
+  &[aria-expanded="true"] {
+    visibility: visible;
+    transform: translatex(0);
   }
 }
