--- a/src/css/components/nav-button-mobile.css
+++ b/src/css/components/nav-button-mobile.css
@@ -1,6 +1,8 @@
 
 /* Mobile */
 .mobile-nav-button {
+  position: relative;
+  z-index: 10; /* appear above mobile nav */
   align-self: center;
   display: flex;
   align-items: center;
