--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -4,10 +4,10 @@
     background-color: #F1F4F7;
     margin-left: calc(-1 * var(--sp));
     margin-right: calc(-1 * var(--sp));
-    margin-bottom: calc(2 * var(--sp));
+    margin-bottom: var(--sp2);
     width: calc(100% + 2 * var(--sp));
     height: calc(3 * var(--sp));
-    padding: calc(2 * var(--sp));
+    padding: var(--sp2);
     font-family: serif;
     font-size: 16px;
   }
