--- a/src/css/components/nav-secondary.css
+++ b/src/css/components/nav-secondary.css
@@ -1,13 +1,17 @@
 .secondary-nav__wrapper {
   display: flex;
-  justify-content: flex-end;
-  margin-bottom: 0;
+  margin: var(--sp2) 0;
+
+  @media (--nav) {
+    justify-content: flex-end;
+    margin: 0;
+  }
 }
 
 .secondary-nav {
   @media (--nav) {
-    margin-left: calc(2* var(--sp));
-    padding-left: calc(2* var(--sp));
+    margin-left: var(--sp2);
+    padding-left: var(--sp2);
     border-left: solid 2px #D7E1E8;
   }
 
@@ -28,7 +32,7 @@
     text-transform: uppercase;
     font-weight: bold;
     font-size: 14px;
-    line-height: calc(2 * var(--sp));
+    line-height: var(--sp2);
     white-space: nowrap;
   }
 
@@ -38,8 +42,14 @@
 }
 
 .header-nav__search-button {
+  display: none;
   -webkit-appearance: none;
   border: 0;
-  margin-left: calc(2 * var(--sp));
+  background: transparent;
+  margin-left: var(--sp2);
   cursor: pointer;
+
+  @media (--nav) {
+    display: block;
+  }
 }
