--- a/src/css/components/social-container.css
+++ b/src/css/components/social-container.css
@@ -1,9 +1,5 @@
 .social-container {
   @media (--nav) {
-    /* We'll handle this with JS to get better control.  */
-    /* position: sticky;
-    top: calc(6 * var(--sp));
-    left: 0; */
     width: var(--content-left);
     flex-shrink: 0;
     background-color: #F7F9FA;
@@ -33,12 +29,12 @@
     position: relative;
     width: var(--content-left);
     background-color: #F7F9FA;
-    padding: calc(8 * var(--sp)) 0;
+    padding: var(--sp8) 0;
 
 
     &.js-fixed {
       position: fixed;
-      top: calc(6 * var(--sp));
+      top: var(--sp6);
       left: 0;
       height: calc(100vh - 6 * var(--sp))
     }
